--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -169,11 +169,11 @@
 
                         <div class="list-item">
                             <span>Attack: </span>
-                            <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-item-id="{{this._id}}" data-label="Melee Attack" data-char="ws">Roll</span>
+                            <span class="melee-attack rollable button" data-roll-type="meleeAttack" data-target="{{../data.characteristics.ws.total}}" data-item-id="{{this.id}}" data-label="Melee Attack" data-char="ws">Roll</span>
                         </div>
                         <div class="list-item">
                             <span>Damage: </span>
-                            <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+                            <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.data.damageFormula.value}}</a>
                         </div>
                         {{#if this.flags.fortyk.force}}
                         <div class="list-item">
@@ -220,8 +220,8 @@
 
                         </div>
                         <div class="list-item flexrow">
-                            <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
-                            <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+                            <a class="list-button item-edit" title="Edit" data-item-id="{{this.id}}"></a>
+                            <a class="list-button item-delete" title="Delete" data-item-id="{{this.id}}"></a>
                         </div>
                     </div>
                 </div>
@@ -237,11 +237,11 @@
 
                         <div class="list-item">
                             <span>Attack: </span>
-                            <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-item-id="{{this._id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
+                            <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
                         </div>
                         <div class="list-item">
                             <span>Damage: </span>
-                            <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
+                            <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.data.damageFormula.value}}</a>
 
                         </div>
 
@@ -255,7 +255,7 @@
                         {{/if}}
                         {{#if this.flags.fortyk.maximal}}
                         <div class="list-item">
-                            <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this._id}}"  {{checked this.flags.fortyk.maximalMode}}></span>
+                            <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this.id}}"  {{checked this.flags.fortyk.maximalMode}}></span>
 
 
                         </div>
@@ -263,7 +263,7 @@
                         {{#if this.flags.fortyk.lasModal}}
                         <div class="list-item">
                             <span>Las Fire Mode: 
-                                <select class="lasMode"  data-item-id="{{this._id}}" data-dtype="Number">
+                                <select class="lasMode"  data-item-id="{{this.id}}" data-dtype="Number">
                                     {{#select this.flags.fortyk.lasMode}}
 
                                     {{#each this.FORTYK.lasModes}}
@@ -280,7 +280,7 @@
                         <div class="list-item flexrow">
                             <span>Clip: </span>
 
-                            <input class="item-text-input" type="text" data-target="data.clip.value" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
+                            <input class="item-text-input" type="text" data-target="data.clip.value" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this.id}}" data-dtype="Number">
                             <span> / </span>
                             <span>{{this.data.clip.max}}</span>
 
@@ -330,8 +330,8 @@
                         </div>
                         <div class="list-item flexrow">
 
-                            <a class="list-button item-edit" title="Edit" data-item-id="{{this._id}}"></a>
-                            <a class="list-button item-delete" title="Delete" data-item-id="{{this._id}}"></a>
+                            <a class="list-button item-edit" title="Edit" data-item-id="{{this.id}}"></a>
+                            <a class="list-button item-delete" title="Delete" data-item-id="{{this.id}}"></a>
 
                         </div>
 
@@ -401,7 +401,7 @@
                                     <option value="" {{#if data.secChar.wornGear.armor.data}}selected{{/if}}>None</option>
                                     {{#each actor.armors}}
 
-                                    <option value="{{this._id}}" {{#if this.data.isEquipped}}selected{{/if}}>{{this.name}}</option>
+                                    <option value="{{this.id}}" {{#if this.data.isEquipped}}selected{{/if}}>{{this.name}}</option>
                                     {{/each}}
                                 </select>
                                 <a class="npc-armor-create plus-button" data-type="armor" title="Add Armor"></a>
