--- a/templates/actor/actor-psykana.html
+++ b/templates/actor/actor-psykana.html
@@ -1,55 +1,65 @@
 <div class="sheet-psy flexcol">
 
-    <div class="psy-header flexrow">
+    <div class="psy-header grid grid-4col">
         {{#unless (contains data.psykana.psykerType.value "navigator")}}
-        <div class="flexcol">
-            <label>Psy Rating:</label>
-            <input type="text" class="combat-resources" data-target="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number"/>
+        
+            <div class="flexrow list-item">
+                <label>Psy Rating:</label>
+                <input type="text" class="combat-resources" data-target="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number"/>
 
-        </div>
-        <div class="flexcol">
-            <label>Sustained Powers:</label>
-            <input type="text" class="combat-resources" data-target="data.psykana.pr.sustain" value="{{data.psykana.pr.sustain}}" data-dtype="Number"/>
+            </div>
+            <div class="flexrow list-item">
+                <label>Sustained Powers:</label>
+                <input type="text" class="combat-resources" data-target="data.psykana.pr.sustain" value="{{data.psykana.pr.sustain}}" data-dtype="Number"/>
 
-        </div>
-        <div class="flexcol">
-            <label>Effective PR: {{data.psykana.pr.effective}}</label>
+            </div>
+            <div class="flexrow list-item">
+                <label>Effective PR: {{data.psykana.pr.effective}}</label>
 
-        </div>
+            </div>
+            <div class="flexrow list-item">
+                <label>Phenomena Modifier:</label>
+                <input type="text" class="combat-resources" data-target="data.psykana.phenomena.value" value="{{data.psykana.phenomena.value}}" data-dtype="Number"/>
+
+            </div>
+       
+
         {{/unless}}
-        <div class="flexcol">
-            <label>Class:</label>
-            <select class="psyType-select" name="data.psykana.psykerType.value" data-dtype="String">
-                {{#select data.psykana.psykerType.value}}
-                <option value="bound">Bound</option>
-                <option value="unbound">Unbound</option>
-                <option value="daemon">Daemon</option>
-                <option value="navigator">Navigator</option>
-                {{/select}}
-            </select>
-        </div>
-        <div class="flexcol">
-            <label>Psy Modifier:</label>
-            <input type="text" name="data.psykana.mod.value" value="{{data.psykana.mod.value}}">
-        </div>
-        <div class="flexcol">
-            <label>Show:</label>
-            <select class="psyType-select" name="data.psykana.filter" data-dtype="String">
-                
-                {{#select data.psykana.filter}}
-                <option value="">All</option>
-                {{#each psyDisciplines}}
-                <option value="{{this}}">{{this}}</option>
-                {{/each}}
-                {{/select}}
-            </select>
-        </div>
+            <div class="flexrow list-item">
+                <label>Class:</label>
+                <select class="psyType-select" name="data.psykana.psykerType.value" data-dtype="String">
+                    {{#select data.psykana.psykerType.value}}
+                    <option value="bound">Bound</option>
+                    <option value="unbound">Unbound</option>
+                    <option value="daemon">Daemon</option>
+                    <option value="navigator">Navigator</option>
+                    {{/select}}
+                </select>
+            </div>
+            <div class="flexrow list-item">
+                <label>Psy Modifier:</label>
+                <input type="text" name="data.psykana.mod.value" value="{{data.psykana.mod.value}}">
+            </div>
+            <div class="flexrow list-item2">
+                <label>Show:</label>
+                <select class="psyType-select" name="data.psykana.filter" data-dtype="String">
+
+                    {{#select data.psykana.filter}}
+                    <option value="">All</option>
+                    {{#each psyDisciplines}}
+                    <option value="{{this}}">{{this}}</option>
+                    {{/each}}
+                    {{/select}}
+                </select>
+            </div>
+        
+
     </div>
     <a class="item-create button" data-type="psychicPower" title="Add a new Psychic Power">Add Psychic Power</a>
     <div class="psy-powers grid grid-2col">
         {{#each actor.psychicPowers as |power key|}}
         <div class="list-item flexcol">
-            
+
             <div class="grid grid-3col">
 
 
@@ -137,7 +147,7 @@
                     <a class="item-edit" title="Edit Power" data-item-id="{{power._id}}"></a>
                     <a class="item-delete" title="Delete Power" data-item-id="{{power._id}}"></a>
                 </div>
-                
+
             </div>
 
 
