--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -25,7 +25,7 @@
 
                 </div>
             </div>
-            <div class="grid grid-3col">
+            <div class="grid grid-4col">
                 <div class="resource flex-group-center">
                     <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
                     <div class="resource-content flexrow flex-center flex-between">
@@ -524,37 +524,60 @@ Stays commented until the parse script works
         <div class="tab psykana" data-group="primary" data-tab="psykana">
             <div class="psy flexcol">
 
-                <div class="psy-header flexrow">
-                    <div class="flexcol">
+                <div class="psy-header grid grid-4col">
+                    {{#unless (contains data.psykana.psykerType.value "navigator")}}
+
+                    <div class="flexrow list-item">
                         <label>Psy Rating:</label>
                         <input type="text" class="combat-resources" data-target="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number"/>
 
                     </div>
-                    <div class="flexcol">
+                    <div class="flexrow list-item">
                         <label>Sustained Powers:</label>
                         <input type="text" class="combat-resources" data-target="data.psykana.pr.sustain" value="{{data.psykana.pr.sustain}}" data-dtype="Number"/>
-                    </div>
-                    <div class="flexcol">
-                        <label>Effective PR:</label>
-                        <input type="text" name="data.psykana.pr.effective" value="{{data.psykana.pr.effective}}" disabled>
-                    </div>
-                    <div class="flexcol">
-                        <label>Class:</label>
 
+                    </div>
+                    <div class="flexrow list-item">
+                        <label>Effective PR: {{data.psykana.pr.effective}}</label>
+
+                    </div>
+                    <div class="flexrow list-item">
+                        <label>Phenomena Modifier:</label>
+                        <input type="text" class="combat-resources" data-target="data.psykana.phenomena.value" value="{{data.psykana.phenomena.value}}" data-dtype="Number"/>
+
+                    </div>
+
+
+                    {{/unless}}
+                    <div class="flexrow list-item">
+                        <label>Class:</label>
                         <select class="psyType-select" name="data.psykana.psykerType.value" data-dtype="String">
                             {{#select data.psykana.psykerType.value}}
                             <option value="bound">Bound</option>
                             <option value="unbound">Unbound</option>
                             <option value="daemon">Daemon</option>
-
+                            <option value="navigator">Navigator</option>
                             {{/select}}
                         </select>
                     </div>
-                    <div class="flexcol">
+                    <div class="flexrow list-item">
                         <label>Psy Modifier:</label>
-                        <input type="text" class="combat-resources" data-target="data.psykana.mod.value" value="{{data.psykana.mod.value}}" data-dtype="Number"/>
-
+                        <input type="text" name="data.psykana.mod.value" value="{{data.psykana.mod.value}}">
                     </div>
+                    <div class="flexrow list-item2">
+                        <label>Show:</label>
+                        <select class="psyType-select" name="data.psykana.filter" data-dtype="String">
+
+                            {{#select data.psykana.filter}}
+                            <option value="">All</option>
+                            {{#each psyDisciplines}}
+                            <option value="{{this}}">{{this}}</option>
+                            {{/each}}
+                            {{/select}}
+                        </select>
+                    </div>
+
+
                 </div>
                 {{#if (greaterThan data.psykana.pr.value 0)}}
                 <a class="item-create button" data-type="psychicPower" title="Add a new Psychic Power">Add Psychic Power</a>
